<resources>
    <string name="app_name">StoriBrianVianaChallenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StoriApp">StoriApp</string>
    <string name="Error">Error</string>
    <string name="ErrorDialog">Ocurrio un Problema</string>
    <string name="Exito">Éxito</string>
    <string name="Aceptar">Aceptar</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellido">Apellidos</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="contrasena">Contraseña</string>
    <string name="cuenta_creada">¿Ya tienes una cuenta?</string>
    <string name="olvide_contrasena">Olvide mi contraseña</string>
    <string name="saldo">Saldo</string>
    <string name="saldo_cash">$0.00</string>
    <string name="movimientos">Movimientos</string>
    <string name="date">07 Mayo 2024</string>
    <string name="no_tienes_movimientos">No tienes movimientos</string>
    <string name="date_time">12:00 AM</string>
    <string name="monto">$1,000.00</string>
    <string name="reference">12156125610</string>
    <string name="mv_detalle">pago tarjeta credito</string>
    <string name="detail">Detalle de Movimiento</string>
    <string name="movimiento">Movimiento</string>
    <string name="pago">Pago</string>
    <string name="id_transaccion">ID Transacción:</string>
    <string name="importe">Importe:</string>
    <string name="iva">IVA:</string>
    <string name="total">Total:</string>
    <string name="referencia">Referencia</string>
    <string name="fecha">Fecha:</string>
    <string name="tipo">Tipo:</string>
    <string name="venta">Venta</string>
    <string name="detalle">Detalle:</string>
    <string name="share">Compartir comprobante</string>
    <string name="requerido">requerido*</string>
    <string name="date_nr">07–05–2024</string>

</resources>